[gd_scene load_steps=6 format=3 uid="uid://b04xuqmeddq78"]

[ext_resource type="Texture2D" uid="uid://dro6gv1ehkumc" path="res://assets/icon/pin-0.png" id="1_qpuiw"]
[ext_resource type="PackedScene" uid="uid://bncs0wdryttnb" path="res://ui/ItemManageDropdown.tscn" id="1_r83oy"]
[ext_resource type="Script" path="res://ui/sections/ItemActionHeader.gd" id="1_vngcq"]
[ext_resource type="Texture2D" uid="uid://dps4opj3en18f" path="res://assets/icon/pin-1.png" id="2_6r4k8"]
[ext_resource type="Script" path="res://items/PinActionPanelButton.gd" id="3_xo7a6"]

[node name="ItemActionHeader" type="HBoxContainer"]
offset_right = 1024.0
offset_bottom = 23.0
script = ExtResource("1_vngcq")

[node name="PinActionPanelButton" type="TextureButton" parent="."]
offset_top = 5.0
offset_right = 20.0
offset_bottom = 25.0
size_flags_vertical = 4
toggle_mode = true
texture_normal = ExtResource("1_qpuiw")
texture_pressed = ExtResource("2_6r4k8")
script = ExtResource("3_xo7a6")

[node name="ItemManageDropdown" parent="." instance=ExtResource("1_r83oy")]
anchor_right = 0.0
anchor_bottom = 0.0
offset_left = 24.0
offset_right = 44.0
offset_bottom = 31.0

[node name="GameItemLabel" type="Label" parent="."]
offset_left = 48.0
offset_top = 4.0
offset_right = 49.0
offset_bottom = 27.0
mouse_filter = 1

[node name="MarginContainer" type="MarginContainer" parent="."]
offset_left = 53.0
offset_right = 980.0
offset_bottom = 31.0
size_flags_horizontal = 3

[node name="RoomSizeLabel" type="Label" parent="."]
visible = false
offset_left = 53.0
offset_right = 1024.0
offset_bottom = 23.0
size_flags_horizontal = 3
horizontal_alignment = 2

[node name="MoveLeftButton" type="Button" parent="."]
offset_left = 984.0
offset_right = 1002.0
offset_bottom = 31.0
hint_tooltip = "Move panel left
Shift+click to move to front"
text = "<"

[node name="MoveRightButton" type="Button" parent="."]
offset_left = 1006.0
offset_right = 1024.0
offset_bottom = 31.0
hint_tooltip = "Move panel right
Shift+click to move to end"
text = ">"
